<resources>
    <string name="app_name">Parcial Comp. Movil</string>
    <string name="tvUsuario">Usuarios: </string>
    <string name="tvContrasehna">Contrasenha: </string>

    <string name="hindUsuario">Ingrese usuario</string>
    <string name="hindContrasehna">Ingrese contrasenha</string>

    <string name="btnLogin">Iniciar Session</string>
    <string name="btnRegistrarse">Registrarse</string>

    <string name="imgDescripcion">Descripcion de imagen</string>

    <!--actividad 2 -->
    <string name="tvTituloActivity2">Registro de usuario</string>

    <string name="tvUsuarioA2">Usuario: </string>
    <string name="tvContrasenhaA2">Constrasenha: </string>
    <string name="tvDNI">DNI</string>
    <string name="tvFNacimiento">F. Nacimiento</string>
    <string name="tvMascota">Mascota</string>

    <string name="tvGenero">Genero</string>

    <string name="tvECivil">E. Civil</string>

    <string name="rbESoltero">Soltero</string>
    <string name="rbECasado">Casado</string>
    <string name="rbEDivorciado">Divorciado</string>

    <string name="btnRegistrar">Registrar</string>
    <string name="btnVolver">Volver</string>

    <string name="hindUsuarioA2">Ingrese usuario</string>
    <string name="hindContrasehnaA2">Ingrese contrasenha</string>
    <string name="hindDNI">Ingrese Dni</string>
    <string name="hindCFNacimiento">Ingrese F. Nacimiento</string>
    <string name="hindCorreo">Ingrese correo</string>

    <!--actividad 3 -->
    <string name="btnRegresarA3">Regresar</string>
    <string name="btnRefresacarA3">Refrescar</string>
    <string name="btnMichi"> </string>

    <string name="chkMascota1">Perro</string>
    <string name="chkMascota2">Gato</string>
    <string name="chkMascota3">Loro</string>

    <string name="nameActivity2">Actividad Formulario</string>

</resources>
