<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formularioPersonal">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="41dp"
        android:text="@string/tvTituloActivity2"
        app:layout_constraintStart_toStartOf="@+id/txtUsuarioA2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsuarioA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/hindUsuarioA2"
        android:inputType="text"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/tvUsuarioA2"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtUsuarioA2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/tvDNI"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDni"
        app:layout_constraintEnd_toStartOf="@+id/txtDni" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/hindDNI"
        android:inputType="number"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="@+id/txtContrasenhaA2"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenhaA2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/tvFNacimiento"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtFNacimiento"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtFNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/tvFNacimiento"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/txtDni"
        app:layout_constraintTop_toBottomOf="@+id/txtDni" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/tvECivil"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/tvGenero"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/spinner" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/txtContrasenhaA2"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbESoltero" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbECasado" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbEDivorciado" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/tvCorreo"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:ems="10"
        android:hint="@string/hindCorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="41dp"
        android:onClick="regresar"
        android:text="@string/btnVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="38dp"
        android:onClick="registrar"
        android:text="@string/btnRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvContrasenhaA2"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtContrasenhaA2"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <EditText
        android:id="@+id/txtContrasenhaA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/hindContrasehnaA2"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="@+id/txtUsuarioA2"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuarioA2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="318dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />
</androidx.constraintlayout.widget.ConstraintLayout>